--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'UH'
 - !lcsh 'Nightingale, Florence, 1820-1910'
+- GITenberg
 title: The Life of Florence Nightingale, vol. 2 of 2
 url: http://www.gutenberg.org/ebooks/40058
